--- a/src/components/template1/css/Advertisements.module.css
+++ b/src/components/template1/css/Advertisements.module.css
@@ -32,17 +32,18 @@
   min-width: 0;
 }
 
+/* Match backend image aspect ratio (2800×1400 / 2400×1200 = 2:1) */
 .link {
   display: block;
   position: relative;
-  aspect-ratio: 2.5/1;
+  aspect-ratio: 2 / 1;
   overflow: hidden;
 }
 
 .img {
   width: 100%;
   height: 100%;
-  object-fit: cover;
+  object-fit: contain; /* show full image without cropping */
   display: block;
 }
 
@@ -118,5 +119,5 @@
 }
 
 @media (max-width: 768px) {
-  .link { aspect-ratio: 16/10; }
+  .link { aspect-ratio: 2 / 1; }
 }
